<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnUno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/otraactividad"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnDos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enviarextra"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnTres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enviarporresultado"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnImagen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/tomarImagen"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnWeb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/ira"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/llamar"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnGps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/gps"
        android:textAllCaps="false" />
</LinearLayout>